--- a/packages/proto-to-cli/package.json
+++ b/packages/proto-to-cli/package.json
@@ -1,9 +1,9 @@
 {
     "name": "proto-to-cli",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "main": "./dist/cli.js",
+    "module": "./dist/cli.mjs",
     "description": "A tool to convert Protocol Buffers files to command line interfaces.",
-    "type": "module",
     "bin": {
         "proto-to-cli": "dist/cli.js"
     },
