--- a/packages/ffi-js/package.json
+++ b/packages/ffi-js/package.json
@@ -42,6 +42,7 @@
         "@2060.io/ffi-napi": "^4.0.9",
         "buffer": "^6.0.3",
         "commander": "^12.1.0",
+        "ffi-rs": "^1.1.1",
         "fs-extra": "^11.2.0",
         "google-protobuf": "^3.21.4",
         "proto-to-cli": "workspace:"
