--- a/packages/ffi-js/package.json
+++ b/packages/ffi-js/package.json
@@ -39,15 +39,15 @@
     "author": "KonghaYao<dongzhongzhidong@qq.com>",
     "license": "Apache-2.0",
     "dependencies": {
-        "@2060.io/ffi-napi": "^4.0.9",
         "buffer": "^6.0.3",
         "commander": "^12.1.0",
-        "ffi-rs": "^1.1.1",
         "fs-extra": "^11.2.0",
         "google-protobuf": "^3.21.4",
+        "koffi": "^2.10.0",
         "proto-to-cli": "workspace:"
     },
     "devDependencies": {
+        "@xan105/ffi": "^1.3.0",
         "@grpc/grpc-js": "^1.12.2",
         "@tybys/wasm-util": "^0.9.0",
         "@types/google-protobuf": "^3.15.12",
