feat: 初步完成 clap 生成

--- a/packages/proto-to-cli/package.json
+++ b/packages/proto-to-cli/package.json
@@ -12,6 +12,8 @@
         "access": "public"
     },
     "scripts": {
+        "test:ts": "./dist/cli.js -i ../../crates/proto/src/index.proto -m InputTemplate -o ./dist/gen/proto.ts",
+        "test:rust": "./dist/cli.js -i ../../crates/proto/src/index.proto -m InputTemplate -o ./dist/gen/proto.rs -t clap",
         "prepublish": "pnpm vite build"
     },
     "keywords": [
