--- a/packages/wasm-edge/Cargo.toml
+++ b/packages/wasm-edge/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-cn-font-proto = { version = "0.1.0", path = "../../crates/proto" }
-cn-font-split = { version = "7.0.0", path = "../.." }
+cn-font-proto = { version = "0.1.0", path = "../../crates/proto", default-features = false }
+cn-font-split = { version = "7.0.0", path = "../..", default-features = false }
 cn-font-utils = { version = "0.1.0", path = "../../crates/cn_font_utils" }
 env_logger = "0.11.5"
 prost = "0.13.4"
+
+[features]
+default = ["with_extra"]
+with_extra = ["cn-font-split/with_extra", "cn-font-proto/with_extra"]
