--- a/.github/workflows/test-font-feature.yml
+++ b/.github/workflows/test-font-feature.yml
@@ -67,4 +67,4 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                   name: playwright-report
-                  path: packages/test/playwright-report
+                  path: packages/test/dist
