--- a/.github/workflows/test-cross-use.yml
+++ b/.github/workflows/test-cross-use.yml
@@ -3,7 +3,7 @@ on:
     workflow_dispatch:
         inputs:
             version:
-                description: '测试写这个为 true'
+                description: '版本号'
                 required: true
                 default: '7.0.0-beta-9'
             dryRun:
