--- a/.github/workflows/test-cross-use.yml
+++ b/.github/workflows/test-cross-use.yml
@@ -240,6 +240,7 @@ jobs:
 
                   # Produce a binary artifact and place it in the mounted volume
                   run: |
+                      apt update -y -q
                       apt install python3 python3-pip -y -q
                       pip3 install cn-font-split
                       cn-font-split-py --install ${{ matrix.platform.target }}@${{inputs.version}}
