--- a/.github/workflows/test-cross-use.yml
+++ b/.github/workflows/test-cross-use.yml
@@ -242,7 +242,7 @@ jobs:
                   run: |
                       apt update -y -q
                       apt install python3 python3-pip -y -q
-                      pip3 install cn-font-split
+                      pip3 install cn-font-split --break-system-packages
                       cn-font-split-py --install ${{ matrix.platform.target }}@${{inputs.version}}
                       cn-font-split-py -i ./SmileySans-Oblique.otf -o ./dist/
 
