--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -205,6 +205,7 @@ jobs:
         if: ${{ github.event.inputs.dryRun != 'true' }}
         runs-on: ubuntu-latest
         needs: [build-wasm, cross-build]
+        permissions: write-all
         steps:
             - name: Create Release
               uses: actions/create-release@v1
