--- a/.github/workflows/test-cross-use.yml
+++ b/.github/workflows/test-cross-use.yml
@@ -190,6 +190,7 @@ jobs:
                       arch: aarch64
                       distro: bookworm
                       target: aarch64-unknown-linux-gnu
+                      break_python: --break-system-packages
 
                     - name: aarch64-unknown-linux-gnu-ubuntu22.04
                       arch: aarch64
@@ -205,11 +206,13 @@ jobs:
                       arch: riscv64
                       distro: ubuntu_latest
                       target: riscv64gc-unknown-linux-gnu
+                      break_python: --break-system-packages
 
                     - name: s390x-unknown-linux-gnu
                       arch: s390x
                       distro: ubuntu_latest
                       target: s390x-unknown-linux-gnu
+                      break_python: --break-system-packages
                     # more targets here ...
         env:
             TZ: Asia/Shanghai
@@ -275,7 +278,7 @@ jobs:
                   run: |
                       apt update -y -q
                       apt install python3 python3-pip -y -q
-                      pip3 install cn-font-split --break-system-packages
+                      pip3 install cn-font-split ${{ matrix.platform.break_python }}
                       cn-font-split-py --install ${{ matrix.platform.target }}@${{inputs.version}}
                       cn-font-split-py -i ./SmileySans-Oblique.otf -o ./dist/
 
